--- a/Lection1/blocks_style/index.html
+++ b/Lection1/blocks_style/index.html
@@ -8,20 +8,7 @@
 	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
-	<div>
-		<header>
-			<div></div>
-			<nav></nav>
-		</header>
-		<main>
-			<section>
-			</section>
-			<section>
-			</section>
-		</main>
-		<footer>
-			<div></div>
-		</footer>
-	</div>
+	<div class="header"></div>
+	<div class="bigSection"></div>
 </body>
 </html>
