--- a/templateswithresetandnorm/index.html
+++ b/templateswithresetandnorm/index.html
@@ -6,15 +6,19 @@
 	<meta description="Templates code">
 	<meta keywords="template, test">
 	<link rel="stylesheet"  href="css/style.css">
+	<link rel="stylesheet"  href="css/reset.css">
 </head>
 <body>
 	<div>
 		<header>
-			<div></div>
+			<div>
+				<h1>Hello </h1>
+			</div>
 			<nav></nav>
 		</header>
 		<main>
 			<section>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos asperiores quibusdam maiores obcaecati vel, nulla cupiditate placeat aut velit eligendi. Quas corporis placeat hic optio, esse incidunt mollitia minima cum.</p>
 			</section>
 			<section>
 			</section>
