--- a/Lection2/selector/index.html
+++ b/Lection2/selector/index.html
@@ -5,23 +5,23 @@
 	<meta charset="utf-8">
 	<meta description="Templates code">
 	<meta keywords="template, test">
-	<link rel="stylesheet"  href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div>
 		<header>
-			<div></div>
-			<nav></nav>
+			<div class="second">Div1</div>
+			<nav>ПРИВЕТ</nav>
 		</header>
 		<main>
-			<section>
-			</section>
-			<section>
-			</section>
+			<h2>HELLO</h2>
+			<section class="section1">Section1</section>
+			<section id="section2">Section2</section>
 		</main>
 		<footer>
-			<div></div>
+			<div>DivFooter</div>
 		</footer>
 	</div>
+
 </body>
 </html>
