--- a/Lection8/calc/index_norm.html
+++ b/Lection8/calc/index_norm.html
@@ -6,6 +6,7 @@
 	<meta description="Templates code">
 	<meta keywords="template, test">
 	<link rel="stylesheet"  href="css/style.css">
+	<link rel="stylesheet"  href="css/normalize.css">
 </head>
 <body>
 	<div>
