--- a/ЛАБЫ/ПРАКТИКА 5/index.html
+++ b/ЛАБЫ/ПРАКТИКА 5/index.html
@@ -76,7 +76,7 @@
 		</main>
 		<footer class="footer">
 			<div class="footer-container">
-				<p class="copyright">Copyright FREE</p>
+				<p class="copyright">Copyright *FREE*</p>
 			</div>
 		</footer>
 	</div>
