--- a/ЛАБЫ/Тема 3/index.html
+++ b/ЛАБЫ/Тема 3/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Тема 3</title>
+</head>
 <body>
 	<main class="container">
 		<div class="exercise">
@@ -54,3 +55,4 @@
 	</main>
 	<script src="js/script.js"></script>
 </body>
+</html>
