--- a/ЛАБЫ/Тема 2/index.html
+++ b/ЛАБЫ/Тема 2/index.html
@@ -1,13 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Тема 2</title>
+</head>
 <body>
 	<main class="container">
-		<div class="exercise">
-			<h1>Задание 1</h1>
-			<label for="inputNumb">Введите число</label>
-			<input type="number" id="inputNumb" />
-			<p>Вы ввели число
-			<span id="resultFirstExercise">.</span>
-			</p>
-		</div>
-	</main>
-	<script src="js/script.js"></script>
+        <div class="exercise">
+            <h1>Задание 1</h1>
+            <label for="inputTask1">Введите число</label>
+            <input type="number" id="inputTask1">
+            <p>Ответ:
+                <span id="resultTask1">.</span>
+            </p>
+
+            <h1>Задание 2</h1>
+            <label for="inputTask2Number">Введите число</label>
+            <input type="number" id="inputTask2Number"><br>
+            <label for="inputTask2Divider">Введите делитель</label>
+            <input type="number" id="inputTask2Divider">
+            <p>Ответ:
+                <span id="resultTask2">.</span>
+            </p>
+
+            <h1>Задание 3</h1>
+            <label for="inputTask3">Введите число</label>
+            <input type="number" id="inputTask3">
+            <p>Ответ:
+                <span id="resultTask3">.</span>
+            </p>
+
+            <h1>Задание 4</h1>
+            <label for="inputTask4">Введите число</label>
+            <input type="number" id="inputTask4">
+            <p>Ответ:
+                <span id="resultTask4">.</span>
+            </p>
+
+            <h1>Задание 5</h1>
+            <label for="inputTask5">Введите число</label>
+            <input type="number" id="inputTask5">
+            <p>Ответ:
+                <span id="resultTask5">.</span>
+            </p>
+        </div>
+    </main>
+    <script src="js/script.js"></script>
 </body>
+</html>
